--- a/README.adoc
+++ b/README.adoc
@@ -23,6 +23,7 @@ COMPOSE_FILE=docker-compose.yml:postgresdb.yml
 COMPOSE_HTTP_TIMEOUT=300
 
 CONFLUENCE_HTTP_PORT=18090
+CONFLUENCE_SYNCHRONY_PORT=18091
 CONFLUENCE_TAG=6.8.2
 CONFLUENCE_JDBC_USER=***
 CONFLUENCE_JDBC_PASSWORD=***
@@ -107,3 +108,8 @@ This requires a X.509 certificate subject to be configured.
 export X509_CERTIFICATE_SUBJECT="/C=AT/OU=Software Craftsmen Gmbh & CoKG/L=Vienna/emailAddress=office@software-craftsmen.at"
 docker-compose -f ssl-certificate.yml run generate-ssl-certificate
 ----
+
+== References
+
+https://confluence.atlassian.com/confeap/running-confluence-behind-nginx-with-ssl-849150880.html
+https://confluence.atlassian.com/confeap/administering-collaborative-editing-847355676.html
