Adapted README.adoc with examples for .env

--- a/README.adoc
+++ b/README.adoc
@@ -23,9 +23,11 @@ COMPOSE_FILE=docker-compose.yml:postgresdb.yml
 COMPOSE_HTTP_TIMEOUT=300
 
 CONFLUENCE_HTTP_PORT=18090
-CONFLUENCE_TAG=6.8.2
+CONFLUENCE_TAG=6.9.1
+CONFLUENCE_VERSION=6.9.1
 CONFLUENCE_JDBC_USER=***
 CONFLUENCE_JDBC_PASSWORD=***
+CATALINA_OPTS=-Xmx2g
 
 POSTGRES_USER=***
 POSTGRES_PASSWORD=***
